# prices-predictor-system

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup_dev.sh
.github/workflows/: ci.yml  train.yml
prices-predictor-system/: config.yaml  pytest.ini  requirements.txt
prices-predictor-system/src/: config_manager.py  data_validator.py  enhanced_feature_engineering.py  error_handler.py  ml_logger.py  model_comparator.py  model_evaluator.py  model_visualizator.py
prices-predictor-system/steps/: data_validation_step.py  model_comparison_step.py  visualization_step.py
prices-predictor-system/tests/: __init__.py  conftest.py  test_basic.py  test_data_validator.py  test_minimal.py  test_model_comparator.py  test_model_evaluator.py  test_smoke.py
