[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | mlruns
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "steps", "pipelines", "tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "seaborn.*",
    "mlflow.*",
    "zenml.*",
    "plotly.*",
    "xgboost.*",
    "lightgbm.*"
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "prices-predictor-system"
description = "Enhanced ML pipeline for house price prediction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Saksham Kapoor", email = "saksham932007@example.com"},
]
keywords = [
    "machine-learning",
    "house-prices",
    "prediction",
    "zenml",
    "mlflow"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

dependencies = [
    "click>=8.1.3",
    "matplotlib>=3.7.5",
    "mlflow>=2.15.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.1",
    "zenml>=0.64.0",
    "plotly>=5.17.0",
    "xgboost>=2.0.1",
    "lightgbm>=4.1.0",
    "joblib>=1.3.2",
    "pyarrow>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "mypy>=1.6.1",
    "isort>=5.12.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.2",
    "notebook>=7.0.6",
]

[project.urls]
Homepage = "https://github.com/Saksham932007/prices-predictor-system"
Repository = "https://github.com/Saksham932007/prices-predictor-system.git"
Issues = "https://github.com/Saksham932007/prices-predictor-system/issues"

[project.scripts]
price-predictor = "run_pipeline:main"

[tool.setuptools_scm]
write_to = "src/_version.py"